Fix animation mobile (blur disabled for the moment)

--- a/css/index.styl
+++ b/css/index.styl
@@ -30,15 +30,13 @@ breakpoint(point, value = 0)
 
 
 @media screen and (max-width: 480px)
-  html.auth0-lock-html body *
-    visibility hidden
+  html.auth0-lock-html body
+    & > *
+      display none
 
-  //   .auth0-lock-container
-  //     display block !important
-
-  // .auth0-lock-container
-  //   background white
-  //   opacity 1
+    .auth0-lock-container
+      background white
+      display block!important
 
 .auth0-global-grobal-error
   background #F04848
@@ -114,9 +112,6 @@ breakpoint(point, value = 0)
     opacity 0
     -webkit-transition opacity .2s ease-in .4s
     transition opacity .2s ease-in .4s
-    visibility hidden
-    +breakpoint("mobile")
-      visibility visible
 
   .auth0-lock-center
     +breakpoint("mobile")
@@ -216,8 +211,8 @@ breakpoint(point, value = 0)
       width 100%
       border-top-left-radius 5px
       border-top-right-radius 5px
-      -webkit-filter blur(40px) grayscale(1)
-      -webkit-backdrop-filter: blur(0);
+      // -webkit-filter blur(40px) grayscale(1)
+      // -webkit-backdrop-filter: blur(0);
       background-color #fff
       background-position center
       background-repeat no-repeat
@@ -227,8 +222,8 @@ breakpoint(point, value = 0)
       transition 0s ease 0s
 
       &.auth0-lock-no-grayscale
-        -webkit-filter blur(100px)
-        -webkit-backdrop-filter: blur(0);
+        // -webkit-filter blur(100px)
+        // -webkit-backdrop-filter: blur(0);
         background-position center
         background-size 500px
 
@@ -281,6 +276,8 @@ breakpoint(point, value = 0)
 
       &.auth0-lock-did-not-receive-code
         font-size 11px
+        font-weight 600
+        color #333332
         margin-bottom 0
 
   .auth0-lock-input-block
@@ -669,10 +666,18 @@ breakpoint(point, value = 0)
     -webkit-transition-delay 0s
     transition-delay 0s
 
+    //mobile view
+    @media screen and (max-width: 480px)
+      position absolute
+
     .auth0-lock-overlay
       opacity .9
       -webkit-transition opacity .3s ease-in 0s
       transition opacity .3s ease-in 0s
+
+      //mobile view
+      @media screen and (max-width: 480px)
+        display none
 
     .auth0-lock-header-bg .auth0-lock-header-bg-inner
       opacity .4
@@ -702,6 +707,7 @@ breakpoint(point, value = 0)
       @media screen and (max-width: 480px)
         width 100%
         height 100%
+        min-height 480px
         position absolute
         top 0
         bottom 0
@@ -715,7 +721,7 @@ breakpoint(point, value = 0)
     .auth0-lock-cred-pane
       //mobile view
       @media screen and (max-width: 480px)
-        min-height 560px
+        min-height 480px
         border-radius 0
 
     .auth0-lock-content
